<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
	<string name="app_name">Boletim Mobile</string>
	<string name="turma">Turma</string>
	<string name="turmas">Turmas</string>
	<string name="materia">Matéria</string>
	<string name="materias">Matérias</string>
	<string name="alunos">Alunos</string>
	<string name="professor">Professor</string>
	
	<string name="visualizar">Visualizar</string>
	<string name="visualizar_aluno">Visualizar Aluno</string>
	<string name="escolha_turma">Selecione a Turma</string>
	<string name="escolha_materia">Selecione a Matéria</string>
	
	<string name="ok">Ok</string>
	<string name="cancel">Cancelar</string>
	<string name="yes">Sim</string>
	<string name="no">Não</string>
	<string name="no_item">Nenhuma entrada!</string>
	<string name="add">Adicionar</string>
	<string name="base_menu_edit">Editar</string>
	<string name="base_menu_delete">Remover</string>
	<string name="nome_turma">Nome da Turma</string>
	<string name="descricao">Descrição</string>
	<string name="cadastrar_turmas">Cadastrar Turmas</string>
	
	<string name="dialog_cancel">Tem certeza de que deseja cancelar? (As informações não salvas serão perdidas)</string>
	<string name="dialog_delete">Tem certeza de que deseja deletar o valor selecionado?</string>
	
	<string name="salvar_turma">Os dados da turma cadastrada serão salvos! Deseja continuar?</string>
	<string name="salvar_turma_sem_materia">Você salvou uma turma sem matérias vinculadas. Deseja usar as matérias padrão do sistema ou cadastrar suas próprias matérias?</string>
	<string name="usar_materias_padrao">Usar padrão</string>
	<string name="materia_padrao_label">Esta é uma matéria padrão</string>
	
	<string name="error_name_invalid">Erro! Nome inválido!</string>
	<string name="error_rm_invalid">Erro! Registro de Matrícula inválido!</string>
	<string name="error_description_invalid">Erro! Descrição inválida!</string>
	<string name="error_turma_not_found">Erro! Turma não encontrada!</string>
	<string name="data_inserted_success">Registro inserido com sucesso!</string>
	<string name="data_inserted_error">Erro ao inserir registro!</string>
	<string name="adicionar_turma">Adicionar Turma</string>
	<string name="adicionar_professor">Adicionar Professor</string>
	<string name="professores">Professores</string>
	<string name="cadastrar_materias">Cadastrar Matérias</string>
	<string name="lancar_notas">Lançar Notas</string>
	<string name="base_menu_lancar"></string>
	<string name="fazer_chamada">Fazer Chamada</string>
	<string name="nome_materia">Nome da Matéria</string>
	<string name="horas_aula">Horas / aula</string>
	<string name="cadastrar_alunos">Cadastrar Alunos</string>
	<string name="adicionar_aluno">Adicionar Aluno</string>
	<string name="nome_aluno">Nome do Aluno</string>
	<string name="rm">Registro de Matrícula</string>
	<string name="idade_aluno">Idade</string>
	<string name="sobre_titulo">Sobre</string>
	
	<string name="sobre_texto">\ 
<b>Boletim Escolar (1.0 beta)</b>\n
\n
Este é um projeto de Open Source que visa disponibilizar
 uma aplicação na qual professores possam gerenciar
 as faltas e notas de seus alunos.\n
O projeto Boletim Escolar Mobile teve seu berço no grupo Android Brasil
e através da ideia deste projeto surgiu o grupo
Android Brasil - Projetos.\n
\n
<b>Idealizadores</b>\n
Thiago Bocchile <i> tykoth@gmail.com</i>\n
Neto (Desilio) <i> desilio@gmail.com</i>\n
Otavio Rofatto <i> rofatto@gmail.com</i>\n
Júlio Cotta <i> juliocbcotta@gmail.com</i>\n
\n
<b>Desenvolvedores</b>\n
(Pelo menos um commit no SVN)\n
Otavio Rofatto <i> rofatto@gmail.com</i>\n
Júlio Cotta <i> juliocbcotta@gmail.com</i>\n
Neto (Desilio) <i> desilio@gmail.com</i>\n
Diêgo <i> diegonunes.sistema@gmail.com</i>\n
Breno Brito <i> breno.caldeira@gmail.com</i>\n
Felipe Toledo <i> felipetgoliveira@gmail.com</i>\n
\n
<b>Repositório</b>\n
http://code.google.com/p/android-brasil-projetos
	</string>
	<string name="error_hour_invalid">Erro! horas/aula errado</string>
	<string name="visualizar_alunos">Visualizar alunos</string>
	<string name="numero_faltas">Número  de faltas</string>
	<string name="lancar_faltas">Lançar Faltas</string>
    <string name="lcto_faltas_sucesso">Lançamento de faltas realizado com sucesso!</string>
</resources>