<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView
		android:text="@string/materia"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<EditText
		android:id="@+id/newSubject"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			android:id="@+id/okButton"
			android:text="@string/ok"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/cancelButton"
			android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
