<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/include_me"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:layout_weight="1">
  <TextView
		android:text="@string/nome_aluno" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
  <EditText 
		android:id="@+id/et_nome_aluno" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
  </EditText>
  <TextView 
		android:text="@string/idade_aluno" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
  <EditText
		android:id="@+id/et_idade_aluno" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" android:inputType="number">
  </EditText>
  <TextView 
		android:text="@string/rm" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
  <EditText
		android:id="@+id/et_registro_matricula" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
  </EditText>

</LinearLayout>