<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/include_me"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">

	<LinearLayout
		android:id="@+id/container"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="vertical"
  		android:gravity="top">
	</LinearLayout>
	<RelativeLayout
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:layout_below="@+id/container"
  		android:gravity="bottom">
		<Button
			android:id="@+id/bt_ok"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/ok">
		</Button>
		<Button
			android:id="@+id/bt_cancelar"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			android:layout_below="@+id/bt_ok">
		</Button>
		<Button
			android:id="@+id/bt_cadastrar"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cadastrar_turmas"
			android:layout_below="@+id/bt_cancelar">
		</Button>

	</RelativeLayout>
</RelativeLayout>
